# SFML-Exercises

./: .gitignore  README.md  build.sh  main.cpp
CMakeTutorial/: CMakeLists.txt  tutorial.cxx
CMakeTutorial/Step1/: CMakeLists.txt  tutorial.cxx
CMakeTutorial/Step10/: CMakeLists.txt
CMakeTutorial/Step11/: CMakeLists.txt
CMakeTutorial/Step11/MathFunctions/: CMakeLists.txt
CMakeTutorial/Step2/: CMakeLists.txt  tutorial.cxx
CMakeTutorial/Step4/: CMakeLists.txt
CMakeTutorial/Step5/: TutorialConfig.h.in
CMakeTutorial/Step5/MathFunctions/: CMakeLists.txt  mysqrt.cxx
CMakeTutorial/Step6/MathFunctions/: CMakeLists.txt  mysqrt.cxx
CMakeTutorial/Step9/: tutorial.cxx
CMakeTutorial/Step9/MathFunctions/: CMakeLists.txt  MathFunctions.h  mysqrt.cxx
SFML By Example/Bouncing Mushroom/: Makefile  main.cpp
SFML By Example/EventManager/: Bindings.h  Callbacks.h  EventDetails.h  EventInfo.h  EventManager.cpp  EventManager.h  EventType.h
SFML By Example/Snake/: Game.cpp  Game.h  Makefile  Snake.cpp  Snake.h  Textbox.cpp  Textbox.h  Window.cpp  Window.h  World.cpp  World.h  main.cpp
SFML By Example/first/: Makefile  main.cpp
SFML By Example/ravioli/: Game.cpp  Game.hpp  Makefile  Window.cpp  Window.hpp  main.cpp
SFML By Example/snake/: Makefile  main.cpp
cfirst/: CMakeLists.txt  README.md
cfirst/main/: CMakeLists.txt  cfirst.cpp  config.h.in
cfirst/tests/: CMakeLists.txt
first/: Makefile  build.sh
